adiciona testes da controller e arch